tests/models/struct/unnamed/f32/fail/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2)]
    f32
);
fn main() {}
